corrected alignments

--- a/www/css/style.css
+++ b/www/css/style.css
@@ -154,8 +154,9 @@ p {
 }
 
 .text-field3{
-    border:2px solid black;
-    background-color: #000;
+    background-color: rgba(0, 0, 0, 0.7);
+    color:#fff !important;
+    margin-bottom: 20px;
 }
 
 .txt-area{
